Correções no carousel de banner e de produto, ajuste no header (input e redução do tamanho dos ícones), inclusão de shortcut icon e title em todas as páginas existentes, correções na página do carrinho, atualização dos html dos componenetes de banner, header e modal-login.

--- a/cadastro-cliente.html
+++ b/cadastro-cliente.html
@@ -13,8 +13,9 @@
     <link rel='stylesheet' href="/componentes/modal-login/login.css">
     <link rel='stylesheet' href="/css/footer.css">
 
-
-    <title>MVP Skins - Cadastre - se</title>
+    <title>MVP Skins | Cadastre-se</title>
+    <link rel="shortcut icon" type="imagex/png" href="/images/id/image (2) (1).png">
+  
 </head>
 
 <body>
