--- a/dashboardcliente.html
+++ b/dashboardcliente.html
@@ -12,7 +12,9 @@
   <link rel='stylesheet' href="./componentes/header/header.css">
   <link rel='stylesheet' href="./componentes/modal-login/login.css">
   <link href="./css/dashboardcliente.css" rel="stylesheet">
-  <title>MVP SKINS | DASHBOARD</title>
+  <title>MVP Skins | Meus dados</title>
+  <link rel="shortcut icon" type="imagex/png" href="/images/id/image (2) (1).png">
+
 </head>
 
 <body>
