--- a/pedido-finalizado-boleto.html
+++ b/pedido-finalizado-boleto.html
@@ -13,7 +13,9 @@
     <link rel='stylesheet' href="./componentes/header/header.css">
     <link rel='stylesheet' href="./componentes/modal-login/login.css">
     <link href="./css/pedido-finalizado.css" rel="stylesheet">
-    <title>MVP Skins | Pedido Finalizado</title>
+    <title>MVP Skins | Pedido finalizado</title>
+    <link rel="shortcut icon" type="imagex/png" href="/images/id/image (2) (1).png">
+  
 </head>
 
 <body>
