--- a/componentes/banners/banners.html
+++ b/componentes/banners/banners.html
@@ -5,60 +5,56 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
     <link href="/componentes/banners/styles.css" rel = "stylesheet">
     <title></title>
 </head>
 
 <body>
-    <!--BANNER-CARROUSEL DA PARTE DE DESTAQUES-->
-    <div class="container-fluid caixa-banner m-0 mb-5 p-0">
-      <div class="container-fluid titulo-banner">
-        <p>Destaques</p>
-      </div>
-      <div id="carrousel-destaque" class="carousel slide" data-bs-ride="carousel">
-        <div class="carousel-indicators">
-          <button type="button" data-bs-target="#carrousel-destaque" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-          <button type="button" data-bs-target="#carrousel-destaque" data-bs-slide-to="1" aria-label="Slide 2"></button>
-          <button type="button" data-bs-target="#carrousel-destaque" data-bs-slide-to="2" aria-label="Slide 3"></button>
-        </div>
-
-        <div class="carousel-inner banner">
-          <div class="carousel-item active">
-            <img src="/images/banners/banner-destaques-1.png" class="w-100" alt="...">
-          </div>
-
-          <div class="carousel-item">
-            <img src="/images/banners/banner-destaques-2.png" class="d-block w-100" alt="...">
-          </div>
-
-          <div class="carousel-item">
-            <img src="/images/banners/banner-destaque-3.jpg" class="d-block w-100" alt="...">
-          </div>
-        </div>
-
-        <button class="carousel-control-prev" type="button" data-bs-target="#carrousel-destaque" data-bs-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
-        </button>
-
-        <button class="carousel-control-next" type="button" data-bs-target="#carrousel-destaque" data-bs-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
-        </button>
-      </div>
+  <!--BANNER-CARROUSEL-->
+  <div class="container-fluid caixa-banner m-0 mb-4 p-0">
+    <div class="container-fluid titulo-banner titulo-banner-img">
+      <p>Destaques</p>
     </div>
-    <!--FIM BANNER-CARROUSEL DA PARTE DE DESTAQUES-->
-    
-    <!--BANNER-CARROUSEL DA PARTE DE EVENTOS-->
+    <div id="carrousel-destaque" class="carousel slide indicadores" data-bs-ride="carousel">
+      <div class="carousel-indicators ">
+        <button type="button" data-bs-target="#carrousel-destaque" data-bs-slide-to="0" class="active"
+          aria-current="true" aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#carrousel-destaque" data-bs-slide-to="1" aria-label="Slide 2"></button>
+        <button type="button" data-bs-target="#carrousel-destaque" data-bs-slide-to="2" aria-label="Slide 3"></button>
+      </div>
 
-    <!--FIM BANNER-CARROUSEL DA PARTE DE EVENTOS-->
+      <div class="carousel-inner banner ">
+        <div class="carousel-item active banner-img">
+          <img src="/images/banners/csgoskin1.jpeg" class="w-100" alt="...">
+        </div>
+
+        <div class="carousel-item banner-img">
+          <img src="/images/banners/csgoskin2.jfif" class="d-block w-100" alt="...">
+        </div>
+
+        <div class="carousel-item banner-img">
+          <img src="/images/banners/csgoskin3.jpg" class="d-block w-100" alt="...">
+        </div>
+      </div>
+
+      <button class="carousel-control-prev botao" type="button" data-bs-target="#carrousel-destaque"
+        data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+
+      <button class="carousel-control-next botao" type="button" data-bs-target="#carrousel-destaque"
+        data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>
+  </div>
+  <!--FIM BANNER-CARROUSEL-->
 
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ"
-        crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
 </body>
 
 </html>
