--- a/componentes/header/header.html
+++ b/componentes/header/header.html
@@ -5,41 +5,38 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>MVP Skins</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <link rel='stylesheet' href="header.css">
   <link rel='stylesheet' href="/componentes/modal-login/login.css">
 </head>
 
 <body>
   <!-- INICIO HEADER -->
-  <header class="row justify-content-around">
-    <div class="topo-header row px-3">
+  <header>
+    <div class="topo-header w-100 px-3 py-0">
       <!-- INÍCIO LOGO  -->
-      <div class="logo col-4 col-xs-4 col-md-2 col-lg-2 col-xl-3">
-        <img src="/images/id/logo-final-1.png" width="130" alt="MVP">
+      <div class="logo my-0 col-4 col-xs-4 col-md-2 col-lg-2 col-xl-3">
+        <img src="/images/id//logo-clean.png" width="130" alt="MVP">
       </div>
       <!-- FIM LOGO  -->
 
       <!-- INÍCIO BARRA DE PESQUISA -->
-      <div class="barra-pesquisa col-8 col-xs-8 col-md-6 col-lg-6 col-xl-6">
+      <div class="barra-pesquisa my-0 col-8 col-xs-8 col-md-6 col-lg-6 col-xl-7">
         <form class="d-flex">
           <input type="search" class="input-search" placeholder="O que você esta procurando?" class="ps-2" />
         </form>
       </div>
       <!-- FIM BARRA DE PESQUISA -->
 
-      <!--BOTÃO DO LOGIN-->
-      <div class="botoes-menu col-12 col-xs-12 col-md-4 col-lg-4 col-xl-3">
-        <button type="button" class="btn btn-primary btn-mvp btn-secundario-mvp btn-login d-flex justify-content-center align-items-center" data-bs-toggle="modal"
-          data-bs-target="#exampleModal">
+      <div class="botoes-menu my-0 col-12 col-xs-12 col-md-4 col-lg-4 col-xl-2">
+        <!--BOTÃO DO LOGIN-->
+        <button type="button" class="btn btn-primary btn-mvp btn-secundario-mvp h-auto" data-bs-toggle="modal" data-bs-target="#exampleModal">
           Login
         </button>
-      <!--FIM DO BOTÃO DO LOGIN-->
-      
-      <!-- BOTÃO DE CADASTRO  -->
-        <button type="reset" class="btn btn-outline-secondary btn-mvp btn-secundario-mvp btn-cadastrar d-flex justify-content-center align-items-center"
-          data-bs-dismiss="modal">
+        <!--FIM DO BOTÃO DO LOGIN-->
+
+        <!-- BOTÃO DE CADASTRO  -->
+        <button type="button" class="btn btn-outline-secondary btn-mvp btn-secundario-mvp h-auto" data-bs-dismiss="modal">
           Cadastre-se
         </button>
       </div>
@@ -58,18 +55,14 @@
               <form>
                 <div class="mb-3">
                   <label for="" class="form-label login-title">E-mail</label>
-                  <input type="email" class="form-control caixas-de-insercao login" aria-describedby="emailHelp"
-                    placeholder="Digite seu e-mail">
+                  <input type="email" class="form-control caixas-de-insercao login" aria-describedby="emailHelp" placeholder="Digite seu e-mail">
                 </div>
                 <div class="mb-3">
                   <label for="" class="form-label login-title">Senha</label>
-                  <input type="password" class="form-control caixas-de-insercao login"
-                    placeholder="Digite sua senha">
+                  <input type="password" class="form-control caixas-de-insercao login" placeholder="Digite sua senha">
 
                   <!--BOTÃO DO COLLAPSE (ESQUECI A SENHA)-->
-                  <button class="links-login" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#collapseWidthExample" aria-expanded="false"
-                    aria-controls="collapseWidthExample">
+                  <button class="links-login" type="button" data-bs-toggle="collapse" data-bs-target="#collapseWidthExample" aria-expanded="false" aria-controls="collapseWidthExample">
                     Esqueci a senha
                   </button>
                   <!--FIM DO BOTÃO DO COLLAPSE-->
@@ -81,8 +74,8 @@
                       <p></p>
                       <form>
                         <div class="mb-3 d-flex justify-content-start">
-                          <input type="email" class="form-control caixas-de-insercao login"
-                            aria-describedby="emailHelp" placeholder="Digite seu e-mail">
+                          <input type="email" class="form-control caixas-de-insercao login" aria-describedby="emailHelp"
+                            placeholder="Digite seu e-mail">
                         </div>
                         <div class="d-flex flex-column justify-content-end">
                           <button type="button" class="btn btn-primary btn-mvp btn-primario-mvp btn-logar"
@@ -138,36 +131,40 @@
     <!--FIM DO MODAL-->
 
     <!-- INICIO NAVBAR -->
-    <div class="row w-100 m-0 p-0">
+    <div class="m-0 p-0">
       <ul class="nav justify-content-around align-items-center nav-principal">
         <li class="nav-item link-header">
           <a data-bs-toggle="offcanvas" href="#offcanvasExample" role="button" aria-controls="offcanvasExample">
             <img src="/images/icones/icon-menu.png" width="30" height="30">
           </a>
-          <div class="offcanvas offcanvas-start menu-lateral" tabindex="-1" id="offcanvasExample"
+          <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasExample"
             aria-labelledby="offcanvasExampleLabel">
             <div class="offcanvas-header">
-              <h5 class="offcanvas-title" id="offcanvasExampleLabel titulo-menu">Titulo(Opcional)</h5>
-              <button type="button" class="btn-close text-reset titulo-menu" data-bs-dismiss="offcanvas"
+              <h5 class="offcanvas-title" id="offcanvasExampleLabel">CATEGORIAS</h5>
+              <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas"
                 aria-label="Close"></button>
             </div>
             <div class="offcanvas-body">
               <div>
                 <ul class="list-group">
-                  <li class="list-group-item d-flex justify-content-between"> Facas
+                  <li class="list-group-item d-flex justify-content-between"> <a class="links-menu" href="">Facas</a>
                     <img src="/images/icones/icon-faca.png" width="30" height="30">
                   </li>
-                  <li class="list-group-item d-flex justify-content-between">Luvas
+                  <li class="list-group-item d-flex justify-content-between"><a class="links-menu" href="">Luvas</a>
                     <img src="/images/icones/icon-luva.png" width="30" height="30">
                   </li>
-                  <li class="list-group-item d-flex justify-content-between">Caixas
+                  <li class="list-group-item d-flex justify-content-between"><a class="links-menu" href="">Caixas</a>
                     <img src="/images/icones/icon-caixa.png" width="30" height="30">
                   </li>
-                  <li class="list-group-item d-flex justify-content-between">Agentes
+                  <li class="list-group-item d-flex justify-content-between"><a class="links-menu" href="">Agentes</a>
                     <img src="/images/icones/icon-agente.png" width="30" height="30">
                   </li>
-                  <li class="list-group-item d-flex justify-content-between">Armas
+                  <li class="list-group-item d-flex justify-content-between"><a class="links-menu" href="">Armas</a>
                     <img src="/images/icones/icon-arma.png" width="30" height="30">
+                  </li>
+                  <li class="list-group-item d-flex justify-content-between">
+                    <a class="links-menu" href="/dashboardcliente.html">Seus Dados</a>
+                    <img src="/images/icones/icon-pessoa.png" width="30" height="30">
                   </li>
                 </ul>
               </div>
@@ -206,14 +203,14 @@
         </li>
 
         <li class="nav-item">
-          <a class="nav-link link-header" href="#">Carrinho
+          <a class="nav-link link-header" href="/carrinho.html">Carrinho
             <img src="/images/icones/icon-carrinho.png" width="30" height="30">
           </a>
         </li>
 
       </ul>
     </div>
-  <!-- FIM NAVBAR -->
+    <!-- FIM NAVBAR -->
   </header>
   <!-- FIM HEADER -->
   
