--- a/pagamento.html
+++ b/pagamento.html
@@ -11,7 +11,8 @@
     <link rel='stylesheet' href="./componentes/header/header.css">
     <link rel='stylesheet' href="./componentes/modal-login/login.css">
     <link href="./css/pagamento.css" rel="stylesheet">
-    <title>MVP SKINS | PAGAMENTO</title>
+    <title>  <title>MVP Skins | Pagamento</title>
+    <link rel="shortcut icon" type="imagex/png" href="/images/id/image (2) (1).png">
 </head>
 <body>
     <!-- INICIO HEADER -->
