--- a/home.html
+++ b/home.html
@@ -16,7 +16,7 @@
   <link rel="stylesheet" href="/componentes/botoes/botoes.css">
 
   <title>MVP Skins | Home</title>
-  <link rel="shortcut icon" type="imagex/png" href="/images/id/image (2) (1).png">
+  <link rel="shortcut icon" type="imagex/png" href="/images/id/icon-mvp.png">
 </head>
 
 <body>
@@ -25,7 +25,7 @@
     <div class="topo-header w-100 px-3 py-0">
       <!-- INÍCIO LOGO  -->
       <div class="logo my-0 col-4 col-xs-4 col-md-2 col-lg-2 col-xl-3">
-        <img src="/images/id//logo-clean.png" width="130" alt="MVP">
+        <img src="/images/id/logo-mvp.png" width="130" alt="MVP">
       </div>
       <!-- FIM LOGO  -->
 
