--- a/componentes/container-produto-grid/container-produto-grid.html
+++ b/componentes/container-produto-grid/container-produto-grid.html
@@ -28,12 +28,13 @@
         <!-- ========================PRIMEIRA PÁGINA DO CAROUSEL======================== -->
         <div class="carousel-item active">
           <div class="cards-produtos">
+
             <!-- Card de produtos -->
             <div class="card card-produto-mvp card-1 p-0 m-3 col-3 col-sm-3 col-md-2 col-lg-2 col-xl-2">
               <!-- Imagem do produto  -->
-              <div class="card-body border-bottom-3 card-produto">
-                <img class="card-img-top img-produto-mvp" src="/images/PRODUTOS/produto-carrousel-1.png"
-                  alt="Imagem de capa do card">
+              <div class="card-body border-bottom-3 card-produto card-produto-img">
+                <img class="card-img-top img-produto-mvp" src="/images/PRODUTOS/produto-carrousel-1.png" alt="Imagem de capa do card">
+                <img class="favoritar-produto" src="/images/icones/icon-coracao-produto.png" alt="Favoritar produto">
               </div>
 
               <!-- Linha  -->
@@ -52,9 +53,9 @@
             <!-- Card de produtos -->
             <div class="card card-produto-mvp card-1 p-0 m-3 col-3 col-sm-3 col-md-2 col-lg-2 col-xl-2">
               <!-- Imagem do produto  -->
-              <div class="card-body border-bottom-3 card-produto">
-                <img class="card-img-top img-produto-mvp" src="/images/PRODUTOS/produto-carrousel-1.png"
-                  alt="Imagem de capa do card">
+              <div class="card-body border-bottom-3 card-produto card-produto-img">
+                <img class="card-img-top img-produto-mvp" src="/images/PRODUTOS/produto-carrousel-1.png" alt="Imagem de capa do card">
+                <img class="favoritar-produto" src="/images/icones/icon-coracao-produto.png" alt="Favoritar produto">
               </div>
 
               <!-- Linha  -->
@@ -73,9 +74,9 @@
             <!-- Card de produtos -->
             <div class="card card-produto-mvp card-2 p-0 m-3 col-3 col-sm-3 col-md-2 col-lg-2 col-xl-2">
               <!-- Imagem do produto  -->
-              <div class="card-body border-bottom-3 card-produto">
-                <img class="card-img-top img-produto-mvp" src="/images/PRODUTOS/produto-carrousel-1.png"
-                  alt="Imagem de capa do card">
+              <div class="card-body border-bottom-3 card-produto card-produto-img">
+                <img class="card-img-top img-produto-mvp" src="/images/PRODUTOS/produto-carrousel-1.png" alt="Imagem de capa do card">
+                <img class="favoritar-produto" src="/images/icones/icon-coracao-produto.png" alt="Favoritar produto">
               </div>
 
               <!-- Linha  -->
@@ -94,9 +95,9 @@
             <!-- Card de produtos -->
             <div class="card card-produto-mvp card-3 p-0 m-3 col-3 col-sm-3 col-md-2 col-lg-2 col-xl-2">
               <!-- Imagem do produto  -->
-              <div class="card-body border-bottom-3 card-produto">
-                <img class="card-img-top img-produto-mvp" src="/images/PRODUTOS/produto-carrousel-1.png"
-                  alt="Imagem de capa do card">
+              <div class="card-body border-bottom-3 card-produto card-produto-img">
+                <img class="card-img-top img-produto-mvp" src="/images/PRODUTOS/produto-carrousel-1.png" alt="Imagem de capa do card">
+                <img class="favoritar-produto" src="/images/icones/icon-coracao-produto.png" alt="Favoritar produto">
               </div>
 
               <!-- Linha  -->
@@ -115,9 +116,9 @@
             <!-- Card de produtos -->
             <div class="card card-produto-mvp card-4 p-0 m-3 col-3 col-sm-3 col-md-2 col-lg-2 col-xl-2">
               <!-- Imagem do produto  -->
-              <div class="card-body border-bottom-3 card-produto">
-                <img class="card-img-top img-produto-mvp" src="/images/PRODUTOS/produto-carrousel-1.png"
-                  alt="Imagem de capa do card">
+              <div class="card-body border-bottom-3 card-produto card-produto-img">
+                <img class="card-img-top img-produto-mvp" src="/images/PRODUTOS/produto-carrousel-1.png" alt="Imagem de capa do card">
+                <img class="favoritar-produto" src="/images/icones/icon-coracao-produto.png" alt="Favoritar produto">
               </div>
 
               <!-- Linha  -->
@@ -141,9 +142,9 @@
             <!-- Card de produtos -->
             <div class="card card-produto-mvp card-1 p-0 m-3 col-3 col-sm-3 col-md-2 col-lg-2 col-xl-2">
               <!-- Imagem do produto  -->
-              <div class="card-body border-bottom-3 card-produto">
-                <img class="card-img-top img-produto-mvp" src="/images/PRODUTOS/produto-carrousel-1.png"
-                  alt="Imagem de capa do card">
+              <div class="card-body border-bottom-3 card-produto card-produto-img">
+                <img class="card-img-top img-produto-mvp" src="/images/PRODUTOS/produto-carrousel-1.png" alt="Imagem de capa do card">
+                <img class="favoritar-produto" src="/images/icones/icon-coracao-produto.png" alt="Favoritar produto">
               </div>
 
               <!-- Linha  -->
@@ -162,9 +163,9 @@
             <!-- Card de produtos -->
             <div class="card card-produto-mvp card-1 p-0 m-3 col-3 col-sm-3 col-md-2 col-lg-2 col-xl-2">
               <!-- Imagem do produto  -->
-              <div class="card-body border-bottom-3 card-produto">
-                <img class="card-img-top img-produto-mvp" src="/images/PRODUTOS/produto-carrousel-1.png"
-                  alt="Imagem de capa do card">
+              <div class="card-body border-bottom-3 card-produto card-produto-img">
+                <img class="card-img-top img-produto-mvp" src="/images/PRODUTOS/produto-carrousel-1.png" alt="Imagem de capa do card">
+                <img class="favoritar-produto" src="/images/icones/icon-coracao-produto.png" alt="Favoritar produto">
               </div>
 
               <!-- Linha  -->
@@ -183,9 +184,9 @@
             <!-- Card de produtos -->
             <div class="card card-produto-mvp card-2 p-0 m-3 col-3 col-sm-3 col-md-2 col-lg-2 col-xl-2">
               <!-- Imagem do produto  -->
-              <div class="card-body border-bottom-3 card-produto">
-                <img class="card-img-top img-produto-mvp" src="/images/PRODUTOS/produto-carrousel-1.png"
-                  alt="Imagem de capa do card">
+              <div class="card-body border-bottom-3 card-produto card-produto-img">
+                <img class="card-img-top img-produto-mvp" src="/images/PRODUTOS/produto-carrousel-1.png" alt="Imagem de capa do card">
+                <img class="favoritar-produto" src="/images/icones/icon-coracao-produto.png" alt="Favoritar produto">
               </div>
 
               <!-- Linha  -->
@@ -204,9 +205,9 @@
             <!-- Card de produtos -->
             <div class="card card-produto-mvp card-3 p-0 m-3 col-3 col-sm-3 col-md-2 col-lg-2 col-xl-2">
               <!-- Imagem do produto  -->
-              <div class="card-body border-bottom-3 card-produto">
-                <img class="card-img-top img-produto-mvp" src="/images/PRODUTOS/produto-carrousel-1.png"
-                  alt="Imagem de capa do card">
+              <div class="card-body border-bottom-3 card-produto card-produto-img">
+                <img class="card-img-top img-produto-mvp" src="/images/PRODUTOS/produto-carrousel-1.png" alt="Imagem de capa do card">
+                <img class="favoritar-produto" src="/images/icones/icon-coracao-produto.png" alt="Favoritar produto">
               </div>
 
               <!-- Linha  -->
@@ -225,9 +226,9 @@
             <!-- Card de produtos -->
             <div class="card card-produto-mvp card-4 p-0 m-3 col-3 col-sm-3 col-md-2 col-lg-2 col-xl-2">
               <!-- Imagem do produto  -->
-              <div class="card-body border-bottom-3 card-produto">
-                <img class="card-img-top img-produto-mvp" src="/images/PRODUTOS/produto-carrousel-1.png"
-                  alt="Imagem de capa do card">
+              <div class="card-body border-bottom-3 card-produto card-produto-img">
+                <img class="card-img-top img-produto-mvp" src="/images/PRODUTOS/produto-carrousel-1.png" alt="Imagem de capa do card">
+                <img class="favoritar-produto" src="/images/icones/icon-coracao-produto.png" alt="Favoritar produto">
               </div>
 
               <!-- Linha  -->
@@ -251,9 +252,9 @@
             <!-- Card de produtos -->
             <div class="card card-produto-mvp card-1 p-0 m-3 col-3 col-sm-3 col-md-2 col-lg-2 col-xl-2">
               <!-- Imagem do produto  -->
-              <div class="card-body border-bottom-3 card-produto">
-                <img class="card-img-top img-produto-mvp" src="/images/PRODUTOS/produto-carrousel-1.png"
-                  alt="Imagem de capa do card">
+              <div class="card-body border-bottom-3 card-produto card-produto-img">
+                <img class="card-img-top img-produto-mvp" src="/images/PRODUTOS/produto-carrousel-1.png" alt="Imagem de capa do card">
+                <img class="favoritar-produto" src="/images/icones/icon-coracao-produto.png" alt="Favoritar produto">
               </div>
 
               <!-- Linha  -->
@@ -272,9 +273,9 @@
             <!-- Card de produtos -->
             <div class="card card-produto-mvp card-1 p-0 m-3 col-3 col-sm-3 col-md-2 col-lg-2 col-xl-2">
               <!-- Imagem do produto  -->
-              <div class="card-body border-bottom-3 card-produto">
-                <img class="card-img-top img-produto-mvp" src="/images/PRODUTOS/produto-carrousel-1.png"
-                  alt="Imagem de capa do card">
+              <div class="card-body border-bottom-3 card-produto card-produto-img">
+                <img class="card-img-top img-produto-mvp" src="/images/PRODUTOS/produto-carrousel-1.png" alt="Imagem de capa do card">
+                <img class="favoritar-produto" src="/images/icones/icon-coracao-produto.png" alt="Favoritar produto">
               </div>
 
               <!-- Linha  -->
@@ -293,9 +294,9 @@
             <!-- Card de produtos -->
             <div class="card card-produto-mvp card-2 p-0 m-3 col-3 col-sm-3 col-md-2 col-lg-2 col-xl-2">
               <!-- Imagem do produto  -->
-              <div class="card-body border-bottom-3 card-produto">
-                <img class="card-img-top img-produto-mvp" src="/images/PRODUTOS/produto-carrousel-1.png"
-                  alt="Imagem de capa do card">
+              <div class="card-body border-bottom-3 card-produto card-produto-img">
+                <img class="card-img-top img-produto-mvp" src="/images/PRODUTOS/produto-carrousel-1.png" alt="Imagem de capa do card">
+                <img class="favoritar-produto" src="/images/icones/icon-coracao-produto.png" alt="Favoritar produto">
               </div>
 
               <!-- Linha  -->
@@ -314,9 +315,9 @@
             <!-- Card de produtos -->
             <div class="card card-produto-mvp card-3 p-0 m-3 col-3 col-sm-3 col-md-2 col-lg-2 col-xl-2">
               <!-- Imagem do produto  -->
-              <div class="card-body border-bottom-3 card-produto">
-                <img class="card-img-top img-produto-mvp" src="/images/PRODUTOS/produto-carrousel-1.png"
-                  alt="Imagem de capa do card">
+              <div class="card-body border-bottom-3 card-produto card-produto-img">
+                <img class="card-img-top img-produto-mvp" src="/images/PRODUTOS/produto-carrousel-1.png" alt="Imagem de capa do card">
+                <img class="favoritar-produto" src="/images/icones/icon-coracao-produto.png" alt="Favoritar produto">
               </div>
 
               <!-- Linha  -->
@@ -335,9 +336,9 @@
             <!-- Card de produtos -->
             <div class="card card-produto-mvp card-4 p-0 m-3 col-3 col-sm-3 col-md-2 col-lg-2 col-xl-2">
               <!-- Imagem do produto  -->
-              <div class="card-body border-bottom-3 card-produto">
-                <img class="card-img-top img-produto-mvp" src="/images/PRODUTOS/produto-carrousel-1.png"
-                  alt="Imagem de capa do card">
+              <div class="card-body border-bottom-3 card-produto card-produto-img">
+                <img class="card-img-top img-produto-mvp" src="/images/PRODUTOS/produto-carrousel-1.png" alt="Imagem de capa do card">
+                <img class="favoritar-produto" src="/images/icones/icon-coracao-produto.png" alt="Favoritar produto">
               </div>
 
               <!-- Linha  -->
